update: try to change display card ui

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -50,42 +50,42 @@
 
         <div class="card-content">
             <div class="card-details">
-                <div><strong>Type: </strong>Text Node</div>
-                <div><strong>HP: </strong>Text Node</div>
-                <div><strong>Number: </strong>Text Node</div>
-                <div><strong>Collection: </strong>Text Node</div>
+                <div id="pokemon-types"><strong>Type: </strong>Text Node</div>
+                <div id="pokemon-hp"><strong>HP: </strong>Text Node</div>
+                <div id="pokemon-number"><strong>Number: </strong>Text Node</div>
+                <div id="pokemon-collection"><strong>Collection: </strong>Text Node</div>
 
                 <div class="attack">
                     <h4>Attack type</h4>
-                    <p><strong>Cost: </strong>Text Node</p>
-                    <p><strong>Description: </strong>Text Node</p>
+                    <p id="pokemon-attackCost"><strong>Cost: </strong>Text Node</p>
+                    <p id="pokemon-attackDescription"><strong>Description: </strong>Text Node</p>
                 </div>
 
                 <div class="weakness">
                     <h4>Weakness</h4>
-                    <p><strong>Type: </strong>Text Node</p>
-                    <p><strong>Value: </strong>Text Node</p>
+                    <p id="pokemon-weakness"><strong>Type: </strong>Text Node</p>
+                    <p id="pokemon-weaknessValue"><strong>Value: </strong>Text Node</p>
                 </div>
 
                 <div class="market-price">
-                    <p><strong>Market Price (tcgplayer): </strong>Text Node</p>
-                    <p><strong>Trend Price (card market)</strong>Text Node</p>
+                    <p id="pokemon-marketPrice"><strong>Market Price (tcgplayer): </strong>Text Node</p>
+                    <p id="pokemon-trendPrice"><strong>Trend Price (card market)</strong>Text Node</p>
                 </div>
 
                 <div class="rarity">
-                    <p><strong>Rarity: </strong>Text Node</p>
+                    <p id="pokemon-rarity"><strong>Rarity: </strong>Text Node</p>
                 </div>
 
                 <div class="pokedex">
-                    <p><strong>National Pokedex Numbers: </strong>Text Node</p>
+                    <p id="pokemon-pokedex"><strong>National Pokedex Numbers: </strong>Text Node</p>
                 </div>
 
                 <div class="flavor-text">
-                    <p>Flavor text</p>
+                    <p id="pokemon-flavorText">Flavor text</p>
                 </div>
 
                 <div class="card-footer">
-                    <p>Release date</p>
+                    <p id="">Release date</p>
                     <!-- dragon vault (black & white). holo effect -->
                 </div>
             </div>
