--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="card.css">
 </head>
 <body>
-    <div class="image-container">
+    <div class="image-container" style="display: none;">
         <input type="text" id="poke-name" placeholder="Enter image name here:">
 
         <!-- Loading text will show while image is being fetched -->
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="card-content"  style="display: block;">
+    <div class="card-content"  style="display: none;">
         <div class="card-header">
             Pokemon
         </div>
@@ -98,7 +98,11 @@
             </div>
         </div>
     </div>
+
+
     
+    <button id="myButton" onclick="changeText()">Click Me</button>
+
     <script src="test.js"></script>
 </body>
 </html>
