--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -36,6 +36,10 @@
     </div>
   </div>
 
+  <div class="modal hidden" id="modal">
+    <button class="close-btn" aria-label="Close">&times;</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
