--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -9,7 +9,9 @@
 <body>
   <div class="card-container">
     <div class="card-image">
-      <img id="cardImage" src="" alt="Latias card">
+      <div class="card-box" id="card-box">
+        <img id="cardImage" src="" alt="Latias card">
+      </div>  
     </div>
     <div class="card-details">
       <h1 id="cardName">Latias</h1>
