--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="card.css">
 </head>
 <body>
-    <div class="image-container" style="display: none;">
+    <div class="image-container">
         <input type="text" id="poke-name" placeholder="Enter image name here:">
 
         <!-- Loading text will show while image is being fetched -->
@@ -101,7 +101,9 @@
 
 
     
-    <button id="myButton" onclick="changeText()">Click Me</button>
+    <div style="z-index: 1000;">
+        <button id="myButton" onclick="changeText()">Click Me</button>
+    </div>
 
     <script src="test.js"></script>
 </body>
