chore: update & styling input field

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="image-container">
-      <input type="text" id="poke-name" placeholder="Enter image name here:">
+    <!-- <div class="image-container" style="display: none;"> -->
+      <input type="text" id="poke-input" placeholder="Enter image name here:">
 
       <!-- Loading text will show while image is being fetched -->
       <!-- <p id="loading-text">Loading...</p> -->
@@ -20,6 +21,7 @@
   </div>
 
   <div class="card-container" style="display: none;">
+    <!-- <div class="card-container"> -->
     <div class="card-image">
       <div class="card-box" id="card-box">
         <img id="cardImage" src="" alt="Latias card">
