--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -118,7 +118,7 @@
 
     
     <div style="z-index: 1000;">
-        <button id="myButton" onclick="changeText()">Click Me</button>
+        <button id="myButton" onclick="Test2()">Change to another</button>
     </div>
 
     <script src="test.js"></script>
