feat: get value from suggestions

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="image-container">
         <div style="display: flex; align-items: center;">
-            <input type="text" id="poke-name" placeholder="Enter pokemon name here:" onkeyup="suggestSearch()">
+            <input type="text" id="poke-name" placeholder="Enter pokemon name here:">
             <div id="refresh" style="margin-left: 10px; z-index: 1000; cursor: pointer; padding: 10px;"  onclick="clearSearch()">
 
                 <i class="fa-solid fa-arrows-rotate"></i>
@@ -121,7 +121,8 @@
         <button id="myButton" onclick="Test2()">Change to another</button>
     </div>
 
-    <script src="test.js"></script>
     <script src="example/autocomplete.js"></script>
+    <script src="test.js"></script>
+    
 </body>
 </html>
