wip: change logic of search, enter scenario complete

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -18,13 +18,13 @@
 
                 <i class="fa-solid fa-arrows-rotate"></i>
             </div>
-            <div id="search" style="margin-left: 10px; z-index: 1000; cursor: pointer; padding: 10px;">
+            <div id="search" style="z-index: 1000; cursor: pointer; padding: 10px;">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
         
 
-        <div class="result-box">
+        <div class="result-box" id="result-box">
           <ul id="suggestionList">
             <li>test</li>
             <li>test2</li>
