wip: bug display when fetching

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="card.css">
 </head>
 <body>
+    <div class="header" id="header" style="display: none;">
+        <h1>Pokemon API Practice</h1>
+        <p>Search for a Pokemon by name to see its details.</p>
+    </div>
     <div class="image-container">
         <div id="search-field" style="display: flex; align-items: center;">
             <input type="text" id="poke-name" placeholder="Enter pokemon name here:">
