wip: list all pokemon

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -122,7 +122,10 @@
         </div>
     </div>
 
-
+    <div class="listAll" id="listAll">
+        <button class="listAllButton" id="listAllButton" onclick="listAllPokemon()">List All Pokemon</button>
+        <!-- <div id="allPokemonContainer" style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px;"></div> -->
+    </div>
     
     <div style="z-index: 1000;">
         <button id="myButton" onclick="Test2()">Change to another</button>
