fix: lightbox with default imgs, wip: link 2 index

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -155,6 +155,11 @@
         <div class="lightbox" id="lightbox">
             <span class="close-img" id="closeimgBtn">&times;</span>
             <img class="lightbox-img" id="lightboxImg" src="" alt="">
+
+                <a href="#" id="infoLink" class="info-link" target="_blank">
+
+                <i class="fa fa-info-circle"></i> More Info
+            </a>
         </div>
     </div>
     
