--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -15,7 +15,8 @@
         <h1>Pokemon API Practice</h1>
         <p>Search for a Pokemon by name to see its details.</p>
     </div>
-    <div class="image-container" style="display: none;">
+    <!-- <div class="image-container" style="display: none;"> -->
+    <div class="image-container">
         <div id="search-field" style="display: flex; align-items: center;">
             <input type="text" id="poke-name" placeholder="Enter pokemon name here:">
             <div id="refresh" style="margin-left: 10px; z-index: 1000; cursor: pointer; padding: 10px;"  onclick="clearSearch()">
