wip: handling prices

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -55,22 +55,25 @@
       <!-- <div id="prices" class="hidden"> -->
       <div id="prices">
         <h3>Prices</h3>
-        <div>
-          <p id="tcg-market"><strong>TCGPlayer Market:</strong> 
-            <div id="priceIn">
-              <span class="currency-symbol">$</span>
-              <span id="marketPrice"></span>
-            </div>
-          </p>
+        <div id="tcgMarket">
+          <p id="tcg-market"><strong>TCGPlayer Market:</strong></p>
+          <div id="priceIn">
+            <span class="currency-symbol">$</span>
+            <span id="marketPrice"></span>
+          </div>
+
+          <ul id = "priceList"></ul>
         </div>
 
-        <div>
+        <div id="cardMarket">
           <p id="card-market"><strong>CardMarket Avg:</strong> 
-            <div id="priceIn">
-              <span class="currency-symbol">$</span>
-              <span id="avgPrice"></span>
-            </div>      
           </p>
+          <div id="priceIn">
+            <span class="currency-symbol">$</span>
+            <span id="avgPrice"></span>
+          </div>
+
+          <ul id = "priceList"></ul>
         </div>
       </div>
     </div>
