wip: display prices, handling

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -56,24 +56,27 @@
       <div id="prices">
         <h3>Prices</h3>
         <div id="tcgMarket">
-          <p id="tcg-market"><strong>TCGPlayer Market:</strong></p>
-          <div id="priceIn">
-            <span class="currency-symbol">$</span>
-            <span id="marketPrice"></span>
+          <div id="tcg-marketInfo">
+            <p id="tcg-market"><strong>TCGPlayer Market:</strong></p>
+            <div id="priceIn">
+              <span class="currency-symbol">$</span>
+              <span id="marketPrice"></span>
+            </div>
           </div>
 
-          <ul id = "priceList"></ul>
+          <!-- <ul id = "priceList"></ul> -->
         </div>
 
         <div id="cardMarket">
-          <p id="card-market"><strong>CardMarket Avg:</strong> 
-          </p>
-          <div id="priceIn">
-            <span class="currency-symbol">$</span>
-            <span id="avgPrice"></span>
+          <div id="card-marketInfo">
+            <p id="card-market"><strong>CardMarket Avg:</strong></p>
+            <div id="priceIn">
+              <span class="currency-symbol">$</span>
+              <span id="avgPrice"></span>
+            </div>
           </div>
 
-          <ul id = "priceList"></ul>
+          <!-- <ul id = "priceList"></ul> -->
         </div>
       </div>
     </div>
