--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -64,7 +64,9 @@
             </div>
           </div>
 
-          <!-- <ul id = "priceList"></ul> -->
+          <!-- <li>prices here</li> -->
+
+          <ul id = "tcg-priceList"></ul>
         </div>
 
         <div id="cardMarket">
@@ -76,7 +78,7 @@
             </div>
           </div>
 
-          <!-- <ul id = "priceList"></ul> -->
+          <ul id = "market-priceList"></ul>
         </div>
       </div>
     </div>
@@ -88,7 +90,8 @@
 
   <div id="closeSearch" onclick="closeSearch()">Click Me</div>
 
-  <div id="pricesContainer" style="display: block; position: relative; top: 100px;"></div>
+  <!-- <div id="pricesContainer" style="display: block; position: relative; top: 100px;"></div> -->
+   <div id="pricesContainer" style="display: none; position: relative; top: 100px;"></div>
   <script src="script.js"></script>
   <script src="autocomplete.js"></script>
 </body>
