chore: effect when show prices

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -52,8 +52,9 @@
       <em id="flavorText"></em>
 
       <button id="togglePrices">Show Prices</button>
-      <!-- <div id="prices" class="hidden"> -->
-      <div id="prices">
+      
+      <!-- <div id="prices"> -->  
+      <div id="prices" class="hidden">
         <h3>Prices</h3>
         <div id="tcgMarket">
           <div id="tcg-marketInfo">
