wip: press sample

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -92,7 +92,20 @@
   <div id="closeSearch" onclick="closeSearch()">Click Me</div>
 
   <!-- <div id="pricesContainer" style="display: block; position: relative; top: 100px;"></div> -->
-   <div id="pricesContainer" style="display: none; position: relative; top: 100px;"></div>
+  <div id="pricesContainer" style="display: none; position: relative; top: 100px;"></div>
+
+  
+  
+  <!-- ================================================================================================ -->
+  <div id="bodi">
+    <div class="progress-container">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+
+
+    <button id="reloadBtn">Reload Page</button>
+  </div>
+
   <script src="script.js"></script>
   <script src="autocomplete.js"></script>
 </body>
