wip: try progress bar

--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -99,7 +99,9 @@
   <!-- ================================================================================================ -->
   <div id="bodi">
     <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
+      <div class="progress-bar" id="progressBar">
+        <div class="progress-text" id="progress-text">0%</div>
+      </div>
     </div>
 
 
