--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -97,7 +97,7 @@
   
   
   <!-- ================================================================================================ -->
-  <div id="bodi">
+  <!-- <div id="bodi">
     <div class="progress-container">
       <div class="progress-bar" id="progressBar">
         <div class="progress-text" id="progress-text">0%</div>
@@ -106,7 +106,7 @@
 
 
     <button id="reloadBtn">Reload Page</button>
-  </div>
+  </div> -->
 
   <script src="script.js"></script>
   <script src="autocomplete.js"></script>
