--- a/Pokemon API Practice/example/index.html
+++ b/Pokemon API Practice/example/index.html
@@ -90,6 +90,7 @@
   </div>
 
   <div id="closeSearch" onclick="closeSearch()">Click Me</div>
+  <div id="game" onclick="game()">Game</div>
 
   <!-- <div id="pricesContainer" style="display: block; position: relative; top: 100px;"></div> -->
   <div id="pricesContainer" style="display: none; position: relative; top: 100px;"></div>
