--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -12,16 +12,20 @@
         
         <div class="game-area">
             <div class="pack-wrapper" id="packWrapper">
-                <canvas id="packCanvas" width="400" height="600"></canvas>
+                <div class="_img">
+                    <img src="assets/layer.png" width="400" height="600" alt="">
+                </div>
+
+                <canvas id="packCanvas" width="400" height="600" hidden></canvas>
                 <canvas id="sliceCanvas" width="400" height="600"></canvas>
             </div>
             
-            <div class="cards-revealed" id="cardsRevealed">
-                <div class="card">⚡</div>
+            <div class="cards-revealed show" id="cardsRevealed">
+                <!-- <div class="card">⚡</div>
                 <div class="card">🔥</div>
                 <div class="card">💧</div>
                 <div class="card">🌿</div>
-                <div class="card">✨</div>
+                <div class="card">✨</div> -->
             </div>
         </div>
 
