--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -26,11 +26,11 @@
                 <div class="card">💧</div>
                 <div class="card">🌿</div>
                 <div class="card">✨</div> -->
-                <div class="card back">
+                <!-- <div class="card back">
                     <div class="card-img">
                         <img src="assets/cards/backside.png"/>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
