chore: upate cut area, backside

--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -17,6 +17,7 @@
                 </div>
                 <canvas id="packCanvas"hidden></canvas>
                 <canvas id="sliceCanvas" width="400" height="600"></canvas>
+                <canvas id="cutAreaCanvas" width="400" height="50"></canvas>
             </div>
             
             <div class="cards-revealed" id="cardsRevealed">
