--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -128,7 +128,7 @@
         <!-- <div id="allPokemonContainer" style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px;"></div> -->
     </div>
 
-    <div>
+    <div class="title2">
         <h2>All Pokemon</h2>
     </div>
     <div class="gallery" id="gallery">
