chore: random completed, test later

--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -30,6 +30,7 @@
         <button class="reset-btn" id="resetBtn" style="display: none;">Mở Gói Khác</button>
     </div>
 
+    <script src="random.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
