--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -31,6 +31,7 @@
     </div>
 
     <script src="random.js"></script>
+    <script src="s.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
