--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
         <div class="container">
-        <h1 class="title">✨ Pokémon Pack Opener ✨</h1>
-        
+        <!-- <h1 class="title">✨ Pokémon Pack Opener ✨</h1> -->
         <div class="game-area" id="game-area">
             <div class="pack-wrapper" id="packWrapper">
                 <div class="_img">
