--- a/Pokemon API Practice/game/index.html
+++ b/Pokemon API Practice/game/index.html
@@ -24,9 +24,11 @@
             </div>
         </div>
 
-        <p class="instruction" id="instruction">Cắt gói thẻ để mở!</p>
-        <p class="flip-instruction" id="flipInstruction" style="display: none;">Nhấn vào thẻ để lật!</p>
-        <button class="reset-btn" id="resetBtn" style="display: none;">Mở Gói Khác</button>
+        <div class="instruction-area" id="instruction-area">    
+            <p class="instruction" id="instruction">Cắt gói thẻ để mở!</p>
+            <p class="flip-instruction" id="flipInstruction" style="display: none;">Nhấn vào thẻ để lật!</p>
+            <button class="reset-btn" id="resetBtn" style="display: none;">Mở Gói Khác</button>
+        </div>
     </div>
 
     <script src="random.js"></script>
